create `code` folder

--- a/code/Binary_Classification.ipynb
+++ b/code/Binary_Classification.ipynb
@@ -52,6 +52,37 @@
     "img_array = np.asarray(img).flatten() / 255\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_all_images(PIXELS: int = 50) -> np.ndarray:\n",
+    "    \"\"\"To read all images from `data` folder\n",
+    "    proccessing them then return them as array data\n",
+    "\n",
+    "    Arguments:\n",
+    "        - `PIXELS`: int max size of image's hight & width\n",
+    "    \n",
+    "    return\n",
+    "        (images, labels)\n",
+    "        `images`: list is images as array\n",
+    "        `labels`: list is the corresponding classes int `images\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    images = []\n",
+    "    labels = []\n",
+    "\n",
+    "    img = Image.open('./data/sunny/sunny sky-0.jpeg')\n",
+    "    # convert into gray and resize\n",
+    "    img = img.convert('L').resize((PIXELS, PIXELS))\n",
+    "    # scale out of 256 values\n",
+    "    img_array = np.asarray(img).flatten() / 255\n",
+    "\n",
+    "    return images, labels"
+   ]
   }
  ],
  "metadata": {
