--- a/code/Binary_Classification.ipynb
+++ b/code/Binary_Classification.ipynb
@@ -585,6 +585,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6907269458001541"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Best model\n",
+    "dt_model = DecisionTreeClassifier(ccp_alpha=0.00075)\n",
+    "dt_model.fit(X_train, y_train)\n",
+    "\n",
+    "dt_model.score(X_test, y_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
