add randomized search

--- a/code/Binary_Classification.ipynb
+++ b/code/Binary_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,9 @@
     "    KFold,\n",
     "    GridSearchCV,\n",
     "    RepeatedKFold,\n",
-    "    train_test_split,\n",
     "    cross_val_score,\n",
+    "    train_test_split,\n",
+    "    RandomizedSearchCV\n",
     ")\n",
     "from sklearn.linear_model import LogisticRegression, LogisticRegressionCV\n",
     "from sklearn.metrics import accuracy_score, RocCurveDisplay\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +56,7 @@
        "12976"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Binary Classification\n",
+    "# Binary Classification `sunny` vs. `cloudy`\n",
     "\n",
     "## LogisticRegression\n",
     "\n",
@@ -604,34 +605,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] END ................................ score: (test=0.719) total time= 2.7min\n",
+      "[CV] END ................................ score: (test=0.679) total time= 2.8min\n",
+      "[CV] END ................................ score: (test=0.713) total time= 2.8min\n",
+      "[CV] END ................................ score: (test=0.713) total time= 2.8min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Done   3 out of  10 | elapsed:  2.9min remaining:  6.7min\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] END ................................ score: (test=0.689) total time= 2.8min\n",
+      "[CV] END ................................ score: (test=0.709) total time= 2.9min\n",
+      "[CV] END ................................ score: (test=0.705) total time= 2.9min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Done   7 out of  10 | elapsed:  3.0min remaining:  1.3min\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] END ................................ score: (test=0.722) total time= 2.9min\n",
+      "[CV] END ................................ score: (test=0.705) total time= 1.9min\n",
+      "[CV] END ................................ score: (test=0.711) total time= 1.9min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:  4.8min finished\n"
+     ]
+    }
+   ],
    "source": [
     "dt_bagging = BaggingClassifier(\n",
     "    DecisionTreeClassifier(),\n",
-    "    n_estimators=5,\n",
+    "    n_estimators=10,\n",
     ")\n",
     "\n",
-    "# create 5-Fold\n",
-    "kfold = KFold(5, shuffle=True)\n",
-    "\n",
-    "dt_bagging_results = cross_val_score(\n",
+    "dt_bagging_scores = cross_val_score(\n",
     "    dt_bagging,\n",
     "    X_train,\n",
     "    y_train,\n",
-    "    cv=kfold,\n",
+    "    cv=10,\n",
     "    scoring=\"accuracy\",\n",
+    "    n_jobs=-1,\n",
+    "    verbose=3,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.71 accuracy with a standard deviation of 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{dt_bagging_scores.mean():0.2f} accuracy with a standard deviation of {dt_bagging_scores.std():0.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tuning with `RandomizedSearchCV`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "max(dt_bagging_results)"
+    "from scipy.stats import uniform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 10 folds for each of 5 candidates, totalling 50 fits\n",
+      "[CV 3/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.710 total time= 5.1min\n",
+      "[CV 2/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.729 total time= 5.2min\n",
+      "[CV 4/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.746 total time= 5.2min\n",
+      "[CV 1/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.735 total time= 5.3min\n",
+      "[CV 7/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.718 total time= 5.3min\n",
+      "[CV 6/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.709 total time= 5.3min\n",
+      "[CV 5/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.717 total time= 5.4min\n",
+      "[CV 8/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.741 total time= 5.3min\n",
+      "[CV 1/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.735 total time= 4.2min\n",
+      "[CV 2/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.735 total time= 4.3min\n",
+      "[CV 3/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.729 total time= 4.3min\n",
+      "[CV 4/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.716 total time= 4.3min\n",
+      "[CV 6/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.728 total time= 4.3min\n",
+      "[CV 5/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.714 total time= 4.4min\n",
+      "[CV 9/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.746 total time= 5.1min\n",
+      "[CV 10/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.747 total time= 5.1min\n",
+      "[CV 7/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.716 total time= 4.3min\n",
+      "[CV 10/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.746 total time= 4.2min\n",
+      "[CV 8/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.732 total time= 4.3min\n",
+      "[CV 9/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.724 total time= 4.3min\n",
+      "[CV 2/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.719 total time= 4.9min\n",
+      "[CV 1/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.736 total time= 5.1min\n",
+      "[CV 3/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.713 total time= 5.1min\n",
+      "[CV 4/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.730 total time= 5.1min\n",
+      "[CV 6/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.728 total time= 4.8min\n",
+      "[CV 5/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.711 total time= 5.1min\n",
+      "[CV 7/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.720 total time= 5.1min\n",
+      "[CV 8/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.729 total time= 5.2min\n",
+      "[CV 9/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.716 total time= 5.1min\n",
+      "[CV 10/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.735 total time= 5.0min\n",
+      "[CV 2/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.732 total time= 4.9min\n",
+      "[CV 1/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.737 total time= 5.0min\n",
+      "[CV 3/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.724 total time= 4.8min\n",
+      "[CV 5/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.728 total time= 4.9min\n",
+      "[CV 6/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.724 total time= 4.9min\n",
+      "[CV 4/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.731 total time= 5.1min\n",
+      "[CV 7/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.719 total time= 4.9min\n",
+      "[CV 8/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.740 total time= 5.2min\n",
+      "[CV 1/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.716 total time= 1.6min\n",
+      "[CV 9/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.746 total time= 5.0min\n",
+      "[CV 10/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.732 total time= 4.9min\n",
+      "[CV 3/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.685 total time= 1.5min\n",
+      "[CV 2/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.710 total time= 1.6min\n",
+      "[CV 4/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.720 total time= 1.6min\n",
+      "[CV 5/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.715 total time= 1.4min\n",
+      "[CV 6/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.711 total time= 1.4min\n",
+      "[CV 7/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.663 total time= 1.3min\n",
+      "[CV 9/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.706 total time= 1.3min\n",
+      "[CV 8/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.744 total time= 1.4min\n",
+      "[CV 10/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.715 total time= 1.3min\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt_bagging = BaggingClassifier(\n",
+    "    DecisionTreeClassifier(),\n",
+    ")\n",
+    "\n",
+    "param_distributions = {\n",
+    "    'base_estimator__ccp_alpha': uniform(0.0, 0.001),\n",
+    "    'n_estimators': range(5, 30),\n",
+    "}\n",
+    "\n",
+    "random_search = RandomizedSearchCV(\n",
+    "    dt_bagging,\n",
+    "    param_distributions,\n",
+    "    cv=10,\n",
+    "    n_iter=10,\n",
+    "    n_jobs=-1,\n",
+    "    verbose=3,\n",
+    "    scoring='accuracy',\n",
+    ")\n",
+    "\n",
+    "random_search_results = random_search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7312563304788628,\n",
+       " BaggingClassifier(base_estimator=DecisionTreeClassifier(ccp_alpha=0.00047190071663165515),\n",
+       "                   n_estimators=19))"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_search_results.best_score_, random_search_results.best_estimator_"
    ]
   },
   {
