done with bagging decision trees

--- a/code/Binary_Classification.ipynb
+++ b/code/Binary_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "12976"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,6 +717,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'base_estimator__ccp_alpha': 0.0,\n",
+       " 'base_estimator__class_weight': None,\n",
+       " 'base_estimator__criterion': 'gini',\n",
+       " 'base_estimator__max_depth': None,\n",
+       " 'base_estimator__max_features': None,\n",
+       " 'base_estimator__max_leaf_nodes': None,\n",
+       " 'base_estimator__min_impurity_decrease': 0.0,\n",
+       " 'base_estimator__min_samples_leaf': 1,\n",
+       " 'base_estimator__min_samples_split': 2,\n",
+       " 'base_estimator__min_weight_fraction_leaf': 0.0,\n",
+       " 'base_estimator__random_state': None,\n",
+       " 'base_estimator__splitter': 'best',\n",
+       " 'base_estimator': DecisionTreeClassifier(),\n",
+       " 'bootstrap': True,\n",
+       " 'bootstrap_features': False,\n",
+       " 'max_features': 1.0,\n",
+       " 'max_samples': 1.0,\n",
+       " 'n_estimators': 10,\n",
+       " 'n_jobs': None,\n",
+       " 'oob_score': False,\n",
+       " 'random_state': None,\n",
+       " 'verbose': 0,\n",
+       " 'warm_start': False}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt_bagging = BaggingClassifier(\n",
+    "    DecisionTreeClassifier(),\n",
+    ")\n",
+    "\n",
+    "dt_bagging.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
    "outputs": [
@@ -785,6 +831,8 @@
     "\n",
     "param_distributions = {\n",
     "    'base_estimator__ccp_alpha': uniform(0.0, 0.001),\n",
+    "    'base_estimator__min_samples_split': range(2, 20, 2),\n",
+    "    'base_estimator__max_depth': range(1, 30),\n",
     "    'n_estimators': range(5, 30),\n",
     "}\n",
     "\n",
@@ -792,7 +840,7 @@
     "    dt_bagging,\n",
     "    param_distributions,\n",
     "    cv=10,\n",
-    "    n_iter=10,\n",
+    "    n_iter=20,\n",
     "    n_jobs=-1,\n",
     "    verbose=3,\n",
     "    scoring='accuracy',\n",
