--- a/code/Binary_Classification.ipynb
+++ b/code/Binary_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.ticker import MultipleLocator, AutoMinorLocator\n",
+    "from scipy.stats import uniform\n",
     "\n",
     "from sklearn.model_selection import (\n",
     "    KFold,\n",
@@ -717,113 +718,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'base_estimator__ccp_alpha': 0.0,\n",
-       " 'base_estimator__class_weight': None,\n",
-       " 'base_estimator__criterion': 'gini',\n",
-       " 'base_estimator__max_depth': None,\n",
-       " 'base_estimator__max_features': None,\n",
-       " 'base_estimator__max_leaf_nodes': None,\n",
-       " 'base_estimator__min_impurity_decrease': 0.0,\n",
-       " 'base_estimator__min_samples_leaf': 1,\n",
-       " 'base_estimator__min_samples_split': 2,\n",
-       " 'base_estimator__min_weight_fraction_leaf': 0.0,\n",
-       " 'base_estimator__random_state': None,\n",
-       " 'base_estimator__splitter': 'best',\n",
-       " 'base_estimator': DecisionTreeClassifier(),\n",
-       " 'bootstrap': True,\n",
-       " 'bootstrap_features': False,\n",
-       " 'max_features': 1.0,\n",
-       " 'max_samples': 1.0,\n",
-       " 'n_estimators': 10,\n",
-       " 'n_jobs': None,\n",
-       " 'oob_score': False,\n",
-       " 'random_state': None,\n",
-       " 'verbose': 0,\n",
-       " 'warm_start': False}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dt_bagging = BaggingClassifier(\n",
-    "    DecisionTreeClassifier(),\n",
-    ")\n",
-    "\n",
-    "dt_bagging.get_params()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 10 folds for each of 5 candidates, totalling 50 fits\n",
-      "[CV 3/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.710 total time= 5.1min\n",
-      "[CV 2/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.729 total time= 5.2min\n",
-      "[CV 4/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.746 total time= 5.2min\n",
-      "[CV 1/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.735 total time= 5.3min\n",
-      "[CV 7/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.718 total time= 5.3min\n",
-      "[CV 6/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.709 total time= 5.3min\n",
-      "[CV 5/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.717 total time= 5.4min\n",
-      "[CV 8/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.741 total time= 5.3min\n",
-      "[CV 1/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.735 total time= 4.2min\n",
-      "[CV 2/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.735 total time= 4.3min\n",
-      "[CV 3/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.729 total time= 4.3min\n",
-      "[CV 4/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.716 total time= 4.3min\n",
-      "[CV 6/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.728 total time= 4.3min\n",
-      "[CV 5/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.714 total time= 4.4min\n",
-      "[CV 9/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.746 total time= 5.1min\n",
-      "[CV 10/10] END base_estimator__ccp_alpha=0.000763133859775309, n_estimators=19;, score=0.747 total time= 5.1min\n",
-      "[CV 7/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.716 total time= 4.3min\n",
-      "[CV 10/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.746 total time= 4.2min\n",
-      "[CV 8/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.732 total time= 4.3min\n",
-      "[CV 9/10] END base_estimator__ccp_alpha=0.00039374925100096257, n_estimators=16;, score=0.724 total time= 4.3min\n",
-      "[CV 2/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.719 total time= 4.9min\n",
-      "[CV 1/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.736 total time= 5.1min\n",
-      "[CV 3/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.713 total time= 5.1min\n",
-      "[CV 4/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.730 total time= 5.1min\n",
-      "[CV 6/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.728 total time= 4.8min\n",
-      "[CV 5/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.711 total time= 5.1min\n",
-      "[CV 7/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.720 total time= 5.1min\n",
-      "[CV 8/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.729 total time= 5.2min\n",
-      "[CV 9/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.716 total time= 5.1min\n",
-      "[CV 10/10] END base_estimator__ccp_alpha=0.0002267177627219611, n_estimators=19;, score=0.735 total time= 5.0min\n",
-      "[CV 2/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.732 total time= 4.9min\n",
-      "[CV 1/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.737 total time= 5.0min\n",
-      "[CV 3/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.724 total time= 4.8min\n",
-      "[CV 5/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.728 total time= 4.9min\n",
-      "[CV 6/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.724 total time= 4.9min\n",
-      "[CV 4/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.731 total time= 5.1min\n",
-      "[CV 7/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.719 total time= 4.9min\n",
-      "[CV 8/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.740 total time= 5.2min\n",
-      "[CV 1/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.716 total time= 1.6min\n",
-      "[CV 9/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.746 total time= 5.0min\n",
-      "[CV 10/10] END base_estimator__ccp_alpha=0.00047190071663165515, n_estimators=19;, score=0.732 total time= 4.9min\n",
-      "[CV 3/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.685 total time= 1.5min\n",
-      "[CV 2/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.710 total time= 1.6min\n",
-      "[CV 4/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.720 total time= 1.6min\n",
-      "[CV 5/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.715 total time= 1.4min\n",
-      "[CV 6/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.711 total time= 1.4min\n",
-      "[CV 7/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.663 total time= 1.3min\n",
-      "[CV 9/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.706 total time= 1.3min\n",
-      "[CV 8/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.744 total time= 1.4min\n",
-      "[CV 10/10] END base_estimator__ccp_alpha=0.0005629805224494406, n_estimators=6;, score=0.715 total time= 1.3min\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dt_bagging = BaggingClassifier(\n",
     "    DecisionTreeClassifier(),\n",
@@ -832,7 +729,7 @@
     "param_distributions = {\n",
     "    'base_estimator__ccp_alpha': uniform(0.0, 0.001),\n",
     "    'base_estimator__min_samples_split': range(2, 20, 2),\n",
-    "    'base_estimator__max_depth': range(1, 30),\n",
+    "    'base_estimator__max_depth': range(10, 35),\n",
     "    'n_estimators': range(5, 30),\n",
     "}\n",
     "\n",
@@ -851,24 +748,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Score: 0.73\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>BaggingClassifier(base_estimator=DecisionTreeClassifier(ccp_alpha=0.0008401410500706274,\n",
+       "                                                        max_depth=27,\n",
+       "                                                        min_samples_split=6),\n",
+       "                  n_estimators=26)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">BaggingClassifier</label><div class=\"sk-toggleable__content\"><pre>BaggingClassifier(base_estimator=DecisionTreeClassifier(ccp_alpha=0.0008401410500706274,\n",
+       "                                                        max_depth=27,\n",
+       "                                                        min_samples_split=6),\n",
+       "                  n_estimators=26)</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">base_estimator: DecisionTreeClassifier</label><div class=\"sk-toggleable__content\"><pre>DecisionTreeClassifier(ccp_alpha=0.0008401410500706274, max_depth=27,\n",
+       "                       min_samples_split=6)</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">DecisionTreeClassifier</label><div class=\"sk-toggleable__content\"><pre>DecisionTreeClassifier(ccp_alpha=0.0008401410500706274, max_depth=27,\n",
+       "                       min_samples_split=6)</pre></div></div></div></div></div></div></div></div></div></div>"
+      ],
       "text/plain": [
-       "(0.7312563304788628,\n",
-       " BaggingClassifier(base_estimator=DecisionTreeClassifier(ccp_alpha=0.00047190071663165515),\n",
-       "                   n_estimators=19))"
+       "BaggingClassifier(base_estimator=DecisionTreeClassifier(ccp_alpha=0.0008401410500706274,\n",
+       "                                                        max_depth=27,\n",
+       "                                                        min_samples_split=6),\n",
+       "                  n_estimators=26)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "random_search_results.best_score_, random_search_results.best_estimator_"
+    "print(f\"Best Score: {random_search_results.best_score_:0.2f}\")\n",
+    "random_search_results.best_estimator_"
    ]
   },
   {
