--- a/code/Binary_Classification.ipynb
+++ b/code/Binary_Classification.ipynb
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -927,48 +927,29 @@
     },
     {
      "data": {
-      "text/html": [
-       "<style>#sk-container-id-3 {color: black;background-color: white;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>XGBClassifier(base_score=0.5, booster=&#x27;gbtree&#x27;, callbacks=None,\n",
-       "              colsample_bylevel=1, colsample_bynode=1, colsample_bytree=1,\n",
-       "              early_stopping_rounds=None, enable_categorical=False,\n",
-       "              eval_metric=None, gamma=0, gpu_id=-1, grow_policy=&#x27;depthwise&#x27;,\n",
-       "              importance_type=None, interaction_constraints=&#x27;&#x27;,\n",
-       "              learning_rate=0.031211714406977634, max_bin=256,\n",
-       "              max_cat_to_onehot=4, max_delta_step=0, max_depth=6, max_leaves=0,\n",
-       "              min_child_weight=3, missing=nan, monotone_constraints=&#x27;()&#x27;,\n",
-       "              n_estimators=1707, n_jobs=0, num_parallel_tree=1,\n",
-       "              predictor=&#x27;auto&#x27;, random_state=0, reg_alpha=0, reg_lambda=1, ...)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">XGBClassifier</label><div class=\"sk-toggleable__content\"><pre>XGBClassifier(base_score=0.5, booster=&#x27;gbtree&#x27;, callbacks=None,\n",
-       "              colsample_bylevel=1, colsample_bynode=1, colsample_bytree=1,\n",
-       "              early_stopping_rounds=None, enable_categorical=False,\n",
-       "              eval_metric=None, gamma=0, gpu_id=-1, grow_policy=&#x27;depthwise&#x27;,\n",
-       "              importance_type=None, interaction_constraints=&#x27;&#x27;,\n",
-       "              learning_rate=0.031211714406977634, max_bin=256,\n",
-       "              max_cat_to_onehot=4, max_delta_step=0, max_depth=6, max_leaves=0,\n",
-       "              min_child_weight=3, missing=nan, monotone_constraints=&#x27;()&#x27;,\n",
-       "              n_estimators=1707, n_jobs=0, num_parallel_tree=1,\n",
-       "              predictor=&#x27;auto&#x27;, random_state=0, reg_alpha=0, reg_lambda=1, ...)</pre></div></div></div></div></div>"
-      ],
       "text/plain": [
-       "XGBClassifier(base_score=0.5, booster='gbtree', callbacks=None,\n",
-       "              colsample_bylevel=1, colsample_bynode=1, colsample_bytree=1,\n",
-       "              early_stopping_rounds=None, enable_categorical=False,\n",
-       "              eval_metric=None, gamma=0, gpu_id=-1, grow_policy='depthwise',\n",
-       "              importance_type=None, interaction_constraints='',\n",
-       "              learning_rate=0.031211714406977634, max_bin=256,\n",
-       "              max_cat_to_onehot=4, max_delta_step=0, max_depth=6, max_leaves=0,\n",
-       "              min_child_weight=3, missing=nan, monotone_constraints='()',\n",
-       "              n_estimators=1707, n_jobs=0, num_parallel_tree=1,\n",
-       "              predictor='auto', random_state=0, reg_alpha=0, reg_lambda=1, ...)"
+       "{'learning_rate': 0.031211714406977634,\n",
+       " 'max_depth': 6,\n",
+       " 'min_child_weight': 3,\n",
+       " 'n_estimators': 1707}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print(f\"Best Score: {xgb_random_result.best_score_:0.2f}\")\n",
-    "xgb_random_result.best_estimator_"
+    "xgb_random_result.best_params_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stochastic Gradient Boosting\n",
+    "Using the parameters from the best params achieved in the previous `RandomizedGridCV`."
    ]
   },
   {
@@ -977,7 +958,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RandomizedSearchCV()"
+    "# create GBM estimator with best params\n",
+    "best_xgb_model = xgb.XGBClassifier(\n",
+    "    **xgb_random_result.best_params_\n",
+    ")\n",
+    "\n",
+    "param_distributions = {\n",
+    "    'subsample': [0.5, 0.75, 1],\n",
+    "    'colsample_bynode': [0.5, 0.75, 1],\n",
+    "    'colsample_bytree': [0.5, 0.75, 1],\n",
+    "    'colsample_bylevel': [0.5, 0.75, 1],\n",
+    "}\n",
+    "# search with 10 random samples\n",
+    "best_xgb_random_search = RandomizedSearchCV(\n",
+    "    best_xgb_model,\n",
+    "    param_distributions,\n",
+    "    cv=5,\n",
+    "    n_iter=10,\n",
+    "    n_jobs=-1,\n",
+    "    verbose=3,\n",
+    "    scoring=\"accuracy\",\n",
+    ")\n",
+    "\n",
+    "# train\n",
+    "best_xgb_random_result = best_xgb_random_search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Score: 0.76\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'subsample': 1,\n",
+       " 'colsample_bytree': 1,\n",
+       " 'colsample_bynode': 0.75,\n",
+       " 'colsample_bylevel': 1}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(f\"Best Score: {best_xgb_random_result.best_score_:0.2f}\")\n",
+    "best_xgb_random_result.best_params_"
    ]
   }
  ],
